--- a/allifmaalcommonapp/templates/allifmaalcommonapp/divisions/divisions.html
+++ b/allifmaalcommonapp/templates/allifmaalcommonapp/divisions/divisions.html
@@ -6,7 +6,7 @@
 {% block style %}
 {%endblock%}
 {% block body %}
-
+<div class="allifmaal-main-container">
 <!--start....main headere-->
 <div class="card-header">
   <div class="row mt-12" ><!--start....header row-->
@@ -1743,7 +1743,7 @@
 
 </div><!--end of main container of the page....-->
 </div>
-
+</div>
   
   {% block scripts %}
  
