--- a/allifmaalcommonapp/templates/allifmaalcommonapp/sectors/sectors.html
+++ b/allifmaalcommonapp/templates/allifmaalcommonapp/sectors/sectors.html
@@ -128,6 +128,159 @@
     
     </div><!--end of row div --->
 
+
+
+
+
+
+
+
+
+<div class="row mt-12"> <!--start....table row-->
+  <div class="col-md-12"> <!--start....table column-->
+  <div class="allif-scroll-table">
+    <div class="table-responsive allif-full-table">
+      <div class="row"><!--start of row div --->
+  <!--start of column two-->
+  <div class="col-md-4">
+    
+      <!--start of the table here-->
+      <div class="allif-details-card table-responsive">
+      <table class="table table-layout">
+      <tbody>
+      <tr>
+        <td>Company</td>
+        <td>{{allifquery.company}}company</td>
+    
+        </tr>
+      <tr>
+      <td>Email </td>
+      <td>{{allifquery.email}}email</td>
+  
+      </tr>
+      
+        <tr>
+          <td>Phone 1</td>
+          <td>{{allifquery.phone1}}phone1</td>
+      
+          </tr>
+      <tr>
+        <td>Phone 2</td>
+        <td>{{allifquery.phone2}}phone2</td>
+    
+        </tr>
+    <tr>
+      <td>City</td>
+      <td>{{allifquery.city}}city</td>
+  
+      </tr>
+      <tr>
+        <td>Country</td>
+        <td>{{allifquery.country}}country</td>
+    
+        </tr>
+ 
+        </tbody>
+        </table>
+      </div>
+        </div>
+           
+    
+     <!--start of column two-->
+     <div class="col-md-4">
+       <!--start of the table here-->
+       <div class="allif-details-card table-responsive">
+       <table class="table table-layout">
+        <tbody>
+        <tr>
+          <td>Company</td>
+          <td>{{allifquery.company}}company</td>
+      
+          </tr>
+        <tr>
+        <td>Email</td>
+        <td>{{allifquery.email}}email</td>
+    
+        </tr>
+        
+          <tr>
+            <td>Phone 1</td>
+            <td>{{allifquery.phone1}}phone2</td>
+        
+            </tr>
+        <tr>
+          <td>Phone 2</td>
+          <td>{{allifquery.phone2}}phone</td>
+      
+          </tr>
+      <tr>
+        <td>City</td>
+        <td>{{allifquery.city}}city</td>
+    
+        </tr>
+        <tr>
+          <td>Country</td>
+          <td>{{allifquery.country}}cityt</td>
+      
+          </tr>
+   
+          </tbody>
+          </table>
+          </div>
+          </div>
+    
+    
+     <!--start of column two-->
+     <div class="col-md-4">
+      <div class="allif-details-card table-responsive">
+       <!--start of the table here-->
+       <table class="table table-layout">
+        <tbody>
+        <tr>
+          <td>Company</td>
+          <td>{{allifquery.company}}country</td>
+      
+          </tr>
+        <tr>
+        <td>Email</td>
+        <td>{{allifquery.email}}compnay</td>
+    
+        </tr>
+        
+          <tr>
+            <td>Phone 1</td>
+            <td>{{allifquery.phone1}}phone1</td>
+        
+            </tr>
+        <tr>
+          <td>Phone 2</td>
+          <td>{{allifquery.phone2}}phone2</td>
+      
+          </tr>
+      <tr>
+        <td>City</td>
+        <td>{{allifquery.city}}city</td>
+    
+        </tr>
+        <tr>
+          <td>Country</td>
+          <td>{{allifquery.country}}contry</td>
+      
+          </tr>
+   
+          </tbody>
+          </table>
+  </div>
+    </div>
+    </div><!--end of row div --->
+      
+        </div>
+
+</div><!--end....table row-->
+</div>
+<!--end of table-->
+
+</div><!--end of main container of the page....-->
 </div>
 </div>
   
